Made window's size variable

--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Weird Sierpiński Triangle</title>
-	<style>
-		body {
-			padding: 0;
-			margin: 0;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
+	<link href="/assets/favicon.ico" rel="icon" type="image/x-icon" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js"
 		integrity="sha512-NxocnqsXP3zm0Xb42zqVMvjQIktKEpTIbCXXyhBPxqGZHqhcOXHs4pXI/GoZ8lE+2NJONRifuBpi9DxC58L0Lw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="sketch.js"></script>
 </head>
 
-<body bgcolor="#2e2e2e">
+<body>
 </body>
 
 </html>
